Add about page with image copyright information, and replace any images that may not have been free to use.

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,12 @@ body {
   overflow: hidden;
 }
 
+.about {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
 #main {
   position: absolute;
   left: 50%;
